@@ -16,8 +16,20 @@ import java.util.List;
 
 public class MovingScanFixture extends Fixture {
 
-    private static final List<DMXPersonality> PERSONALITIES = Collections.singletonList(
-            new DMXPersonality(7, "7-Channel Mode")
+    private static final List<DMXPersonality> PERSONALITIES = List.of(
+
+            // 7 channels (BASE)
+            new DMXPersonality(7, "7ch - Standard")
+                    .addSlot(SharedSlots.INTENSITY)
+                    .addSlot(SharedSlots.RED)
+                    .addSlot(SharedSlots.GREEN)
+                    .addSlot(SharedSlots.BLUE)
+                    .addSlot(SharedSlots.FOCUS)
+                    .addSlot(SharedSlots.PAN)
+                    .addSlot(SharedSlots.TILT),
+
+            // 10 channels
+            new DMXPersonality(10, "10ch - Extended")
                     .addSlot(SharedSlots.INTENSITY)
                     .addSlot(SharedSlots.RED)
                     .addSlot(SharedSlots.GREEN)
@@ -25,6 +37,9 @@ public class MovingScanFixture extends Fixture {
                     .addSlot(SharedSlots.FOCUS)
                     .addSlot(SharedSlots.PAN)
                     .addSlot(SharedSlots.TILT)
+                    .addSlot(SharedSlots.FOCUS)       // Prism
+                    .addSlot(SharedSlots.FOCUS)       // Prism Zoom
+                    .addSlot(SharedSlots.FOCUS)  // Prism Rotation
     );
 
     private static final ResourceLocation TILT_MODEL = new ResourceLocation(TheatricalExtraLights.MOD_ID, "block/moving_scan/moving_scan_tilt");
@@ -73,7 +88,7 @@ public class MovingScanFixture extends Fixture {
 
     @Override
     public float getBeamWidth() {
-        return 0.19f;
+        return 0.0f;
     }
 
     @Override
@@ -97,5 +112,10 @@ public class MovingScanFixture extends Fixture {
     @Override
     public List<DMXPersonality> getDMXPersonalities() {
         return PERSONALITIES;
+    }
+
+    @Override
+    public double getLightRadius() {
+        return 7.5;
     }
 }
